--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,52 @@
-// TODO
+.container {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 0 2rem;
+
+  img {
+    margin: 5rem 0 4rem;
+  }
+}
+
+.posts {
+  text-align: justify;
+
+  h1 {
+    font-size: 1.75rem;
+    font-weight: bold;
+    line-height: 2.12rem;
+    letter-spacing: -0.5px;
+  }
+
+  p {
+    color: var(--gray-100);
+    font-size: 1.12rem;
+    line-height: 1.37rem;
+    margin: 0.5rem 0 1.5rem;
+  }
+
+  .info {
+    display: flex;
+    gap: 1.87rem;
+    margin-bottom: 2rem;
+    color: var(--gray-300);
+
+    time, span {
+      font-size: 0.87rem;
+      line-height: 1rem;
+    }
+
+    svg {
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.morePostsButton {
+  border: none;
+  background: transparent;
+  color: var(--pink);
+  font-size: 1.12rem;
+  line-height: 1.37rem;
+  margin: 4rem 0 5rem;
+}
