--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,11 @@
-// TODO
+.headerContainer {
+  height: 6.5rem;
+}
+
+.headerContent {
+  max-width: 720px;
+  margin: 0 auto;
+  height: 6.5rem;
+  display: flex;
+  align-items: center;
+}
