--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -11,6 +11,11 @@
 .posts {
   text-align: justify;
 
+  a + a {
+    margin-top: 2rem;
+    display: block;
+  }
+
   h1 {
     font-size: 1.75rem;
     font-weight: bold;
@@ -23,22 +28,6 @@
     font-size: 1.12rem;
     line-height: 1.37rem;
     margin: 0.5rem 0 1.5rem;
-  }
-
-  .info {
-    display: flex;
-    gap: 1.87rem;
-    margin-bottom: 2rem;
-    color: var(--gray-300);
-
-    time, span {
-      font-size: 0.87rem;
-      line-height: 1rem;
-    }
-
-    svg {
-      margin-right: 0.5rem;
-    }
   }
 }
 
