--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,14 @@
-// TODO
+.info {
+  display: flex;
+  gap: 1.87rem;
+  color: var(--gray-300);
+
+  time, span {
+    font-size: 0.87rem;
+    line-height: 1rem;
+  }
+
+  svg {
+    margin-right: 0.5rem;
+  }
+}
