--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,7 @@
 :root {
   --white: #fff;
   --pink: #FF57B2;
+  --gray-50: #F8F8F8;
   --gray-100: #D7D7D7;
   --gray-300: #BBBBBB;
   --gray-900: #1A1D23;
@@ -27,10 +28,15 @@
 body {
   background-color: var(--gray-900);
   color: var(--white);
+  margin-bottom: 5rem;
 }
 
 body, input, textarea, select, button {
   font: 400 1rem "Inter", sans-serif;
+}
+
+h1, h2 {
+  color: var(--gray-50);
 }
 
 button {
