--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -18,25 +18,25 @@
 }
 
 .posts {
-  text-align: justify;
+  a {
+    h1 {
+      font-size: 1.75rem;
+      font-weight: bold;
+      line-height: 2.12rem;
+      letter-spacing: -0.5px;
+    }
 
-  a + a {
-    margin-top: 2rem;
-    display: block;
-  }
+    p {
+      color: var(--gray-100);
+      font-size: 1.12rem;
+      line-height: 1.37rem;
+      margin: 0.5rem 0 1.5rem;
+    }
 
-  h1 {
-    font-size: 1.75rem;
-    font-weight: bold;
-    line-height: 2.12rem;
-    letter-spacing: -0.5px;
-  }
-
-  p {
-    color: var(--gray-100);
-    font-size: 1.12rem;
-    line-height: 1.37rem;
-    margin: 0.5rem 0 1.5rem;
+    & + a {
+      margin-top: 2rem;
+      display: block;
+    }
   }
 }
 
