--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -49,6 +49,9 @@
     margin-bottom: 5rem;
 
     div {
+      max-width: 15rem;
+      text-align: left;
+
       &:first-child {
         display: inline-block;
       }
