--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,7 +1,17 @@
+.postContainer {
+  padding: 0 2rem;
+}
+
+.banner {
+  height: 30rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
 .post {
   max-width: 700px;
   margin: 5rem auto 0;
-  text-align: justify;
 
   h1 {
     font-size: 3rem;
@@ -32,7 +42,7 @@
 
     .body p {
       margin-bottom: 1rem;
-      line-height: 1.5rem;
+      line-height: 2rem;
     }
   }
 
@@ -57,6 +67,7 @@
       }
       &:last-child {
         float: right;
+        text-align: right;
       }
     }
 
@@ -68,6 +79,41 @@
       display: block;
       margin-top: 0.5rem;
       color: var(--pink);
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .banner {
+    height: 25rem;
+  }
+
+  .post {
+    h1 {
+      font-size: 2.2rem;
+    }
+
+    .postContent h2 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+    }
+  }
+}
+
+
+@media (max-width: 500px) {
+  .banner {
+    height: 17rem;
+  }
+
+  .post {
+    margin-top: 0;
+
+    h1 {
+      line-height: 2.5rem;
     }
   }
 }
